# dessinImage

./: CMakeLists.txt  README.md
data/: demo.json  figures.json
doc/: Doxyfile.in
include/: cercle.HPP  cercle.hpp  condition.hpp  dessin.hpp  estPetite.hpp  estUn.hpp  et.hpp  figure.HPP  figure.hpp  filtrage.hpp  image.HPP  image.hpp  ligne.HPP  ligne.hpp  matrice2D.hpp  non.hpp  point.HPP  point.hpp  serialisation.hpp  serialisationJSON.hpp  triangle.hpp
include/calcul/: matrice2D.hpp
include/comparable/: comparable.hpp  comparableAire.hpp  comparableDistance.hpp  comparableLexicographique.hpp  comparablePerimetre.hpp  comparateurAire.hpp  comparateurDistance.hpp  comparateurLexicographique.hpp  comparateurPerimetre.hpp
include/comparateur/: comparateur.hpp  comparateurAire.hpp  comparateurDistance.hpp  comparateurLexicographique.hpp  comparateurPerimetre.hpp
include/condition/: condition.hpp  estPetite.hpp  estUn.hpp  et.hpp  non.hpp
include/dessin/: SDLdessin.hpp  dessin.hpp
include/figure/: SDLDrawing.hpp  SDLdessin.hpp  cercle.hpp  dessin.hpp  figure.hpp  filtrage.hpp  image.hpp  ligne.hpp  point.hpp  rectangle.hpp  serialisation.hpp  serialisationJSON.hpp  tri.hpp  triangle.hpp
include/transformation/: matrice2D.hpp
src/: SDLDrawing.cpp  cercle.CPP  cercle.cpp  estPetite.cpp  estUn.cpp  et.cpp  filtrage.cpp  image.CPP  image.cpp  ligne.CPP  ligne.cpp  main.cpp  matrice2D.cpp  non.cpp  point.cpp  serialisationJSON.cpp  triangle.cpp
src/calcul/: matrice2D.cpp
src/comparable/: comparable.cpp  comparableAire.cpp  comparableDistance.cpp  comparableLexicographique.cpp  comparablePerimetre.cpp  comparateur.cpp  comparateurAire.cpp  comparateurDistance.cpp  comparateurLexicographique.cpp  comparateurPerimetre.cpp
src/comparateur/: comparateur.cpp  comparateurAire.cpp  comparateurDistance.cpp  comparateurLexicographique.cpp  comparateurPerimetre.cpp
src/condition/: condition.cpp  estPetite.cpp  estUn.cpp  et.cpp  non.cpp
src/dessin/: SDLdessin.cpp
src/figure/: SDLDrawing.cpp  SDLdessin.cpp  cercle.cpp  figure.cpp  filtrage.cpp  image.cpp  ligne.cpp  main.cpp  point.cpp  rectangle.cpp  serialisationJSON.cpp  tri.cpp  triangle.cpp
src/transformation/: matrice2D.cpp
